@@ -1,0 +1,8 @@
+Title: ibm_svc_nodestats.cpu_util: new check for CPU Utilization per Node on IBM SVC / V7000 devices
+Level: 1
+Component: checks
+Version: 1.2.5i2
+Date: 1396269855
+Class: feature
+
+
